# DosageManagement-CLI

./: .gitignore  CMakeLists.txt  README.md  cJSON.c  cpr.c  cpr.h  dosage.c  dosage.h  encryption.c  encryption.h  login.c  login.h  main.c  patient information.c  patient information.h  smaller functions.c  smaller functions.h  timestamp.c  timestamp.h  write patient note.c  write patient note.h
